# onsilentservice

./: CMakeLists.txt  png to csv.py
boat_classes/: astute_class  vanguard_class
boats/: agile.txt  formidable.txt  vigilant.txt
control/: file_handle_t.cpp  file_handle_t.h  game_model_t.cpp  game_model_t.h  main.cpp  mapping.cpp  mapping.h  noise_source_t.cpp  noise_source_t.h  submarine_t.cpp  submarine_t.h  terminal.cpp  terminal.h
control/noises/: volcanic_vent.txt  whales.txt
